Fix alignment.

--- a/framebuzz/static/framebuzz/player/app/sass/stylesheets/screen.css
+++ b/framebuzz/static/framebuzz/player/app/sass/stylesheets/screen.css
@@ -456,7 +456,7 @@ object, embed, video, iframe {
   background: #323232;
   height: 18px;
   margin: 0 8px;
-  padding: 5.5px 0;
+  padding: 5px 0;
   position: relative;
   top: 0;
   width: 624px;
